# MLIR-MyAdd-Dialect-Test-Project

./: .gitignore  CMakeLists.txt  README.md  test_add.ir  test_invalid1.ir  test_invalid2.ir  test_llvm_dialect.ir  test_zero.ir
include/myadd/: MyAddDialect.cpp.inc  MyAddDialect.h  MyAddDialect.h.inc  MyAddOps.cpp.inc  MyAddOps.h  MyAddOps.h.inc  MyAddOps.td  MyAddPasses.h  MyAddPasses.h.inc  MyAddPasses.td  MyAddPatterns.h  MyAddToLLVM.h
lib/: MyAddDialectPlugin.cpp  MyAddOps.cpp  MyAddPasses.cpp  MyAddPatterns.cpp  MyAddToLLVM.cpp
test/: build_add_ir.cpp  test_llvm_lowering.cpp  test_load.cpp  test_rewrite.cpp
